--- a/RAG/code/04_Self_RAG/self_rag.ipynb
+++ b/RAG/code/04_Self_RAG/self_rag.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# Self-RAG\n",
+    "参考资料：https://mp.weixin.qq.com/s/a3tzatoHdHde9-IqCIwWHQ\n",
+    "\n",
     "论文地址：https://arxiv.org/pdf/2310.11511.pdf\n",
     "\n",
     "Github地址：https://github.com/AkariAsai/self-rag\n",
