--- a/LLM_Fine_Tune/01_llama2_qlora/llama2_qlora.ipynb
+++ b/LLM_Fine_Tune/01_llama2_qlora/llama2_qlora.ipynb
@@ -131,7 +131,15 @@
    "metadata": {},
    "source": [
     "## 配置LoRA参数\n",
-    "当lora_alpha的值较高时，表示权重更新的幅度较大，这可能会使模型更容易过拟合特定的任务数据。相反，当lora_alpha的值较低时，权重更新的幅度较小，有助于保持预训练模型的知识，并减少过拟合的风险"
+    "- r：更新矩阵的秩，也称为Lora注意力维度。较低的秩导致具有较少可训练参数的较小更新矩阵。增加r（不超过32）将导致更健壮的模型，但同时会导致更高的内存消耗。\n",
+    "\n",
+    "- lora_lpha：控制lora比例因子。当lora_alpha的值较高时，表示权重更新的幅度较大，这可能会使模型更容易过拟合特定的任务数据。相反，当lora_alpha的值较低时，权重更新的幅度较小，有助于保持预训练模型的知识，并减少过拟合的风险\n",
+    "\n",
+    "- target_modules：是一个模块名称列表，如“q_proj”和“v_proj“，用作LoRA模型的目标。具体的模块名称可能因基础模型而异。\n",
+    "\n",
+    "- bias：指定是否应训练bias参数。可选参数为：“none”、“all”或“lora_only”。\n",
+    "\n",
+    "输出LoRA Adapter的参数，发现只占原模型的不到2%。"
    ]
   },
   {
@@ -205,7 +213,8 @@
    "source": [
     "max_length = 256\n",
     "dataset = datasets.load_dataset(\n",
-    "    \"databricks/databricks-dolly-15k\", split='train'\n",
+    "    \"databricks/databricks-dolly-15k\", \n",
+    "    split='train'\n",
     ")\n",
     "\n",
     "### generate prompt based on template ###\n",
