--- a/LLM_RAG/code/01_Mistral-7b_LangChain_ChromaDB/Mistral-7b_LangChain_ChromaDB.ipynb
+++ b/LLM_RAG/code/01_Mistral-7b_LangChain_ChromaDB/Mistral-7b_LangChain_ChromaDB.ipynb
@@ -91,9 +91,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "MODEL_NAME = \"mistralai/Mistral-7B-Instruct-v0.1\"\n",
     "\n",
+    "# 量化配置\n",
     "quantization_config = BitsAndBytesConfig(\n",
     "    load_in_4bit=True,  # 使用4位加载模型\n",
     "    bnb_4bit_compute_dtype=torch.float16,  # 使用16位计算\n",
@@ -112,6 +112,7 @@
     "    quantization_config=quantization_config  # 量化配置\n",
     ")\n",
     "\n",
+    "# generation_config是生成配置，用于控制生成的行为\n",
     "generation_config = GenerationConfig.from_pretrained(MODEL_NAME)  # 从预训练模型加载生成配置\n",
     "generation_config.max_new_tokens = 1024 \n",
     "generation_config.temperature = 0.0001 \n",
@@ -119,6 +120,7 @@
     "generation_config.do_sample = True  # 采样\n",
     "generation_config.repetition_penalty = 1.15  # 重复惩罚\n",
     "\n",
+    "# 文本生成管道\n",
     "pipeline = pipeline(\n",
     "    \"text-generation\",\n",
     "    model=model,\n",
@@ -200,8 +202,8 @@
    "source": [
     "embeddings = HuggingFaceEmbeddings(\n",
     "    model_name=\"thenlper/gte-large\",\n",
-    "    model_kwargs={\"device\": \"cuda\"},\n",
-    "    encode_kwargs={\"normalize_embeddings\": True},\n",
+    "    model_kwargs={\"device\": \"cuda\"},  # 使用cuda\n",
+    "    encode_kwargs={\"normalize_embeddings\": True},  # 归一化嵌入\n",
     ")"
    ]
   },
