--- a/LLM_RAG/code/04_高级RAG/01_使用小块检索，小块所属的大块喂给LLM，可以提高RAG性能.ipynb
+++ b/LLM_RAG/code/04_高级RAG/01_使用小块检索，小块所属的大块喂给LLM，可以提高RAG性能.ipynb
@@ -14,6 +14,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 1、基础RAG做法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 安装包、设置环境和下载数据集"
    ]
   },
@@ -29,6 +36,7 @@
     "import os\n",
     "os.environ[\"OPENAI_API_KEY\"] = \"TYPE YOUR API KEY HERE\"\n",
     "\n",
+    "# 数据\n",
     "!wget --user-agent \"Mozilla\" \"https://arxiv.org/pdf/2307.09288.pdf\" -O \"llama2.pdf\"\n"
    ]
   },
@@ -63,7 +71,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 加载文档\n",
+    "### RAG的基本实现开始，包括4个简单步骤"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 步骤1：加载文档\n",
     "使用PDFReader加载PDF文件，并将文档的每一页合并为一个document对象。"
    ]
   },
@@ -83,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 将文档解析为文本块（节点）\n",
+    "### 步骤2：将文档解析为文本块（节点）\n",
     "将文档拆分为文本块，这些文本块在LlamaIndex中被称为“节点”，将chuck大小定义为1024。默认的节点ID是随机文本字符串，然后可以将节点ID格式化为遵循特定的格式。"
    ]
   },
@@ -103,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 选择embedding模型和LLM\n",
+    "### 步骤3：选择embedding模型和LLM\n",
     "需要定义两个模型：\n",
     "- embedding模型用于为每个文本块创建矢量嵌入。在这里使用Hugging Face中的FlagEmbedding模型；\n",
     "- LLM：用户查询和相关文本块喂给LLM，让其生成具有相关上下文的答案。\n",
@@ -126,7 +141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 创建索引、检索器和查询引擎\n",
+    "### 步骤4：创建索引、检索器和查询引擎\n",
     "\n",
     "索引、检索器和查询引擎是基于用户数据或文档进行问答的三个基本组件：\n",
     "\n",
@@ -184,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 高级方法1：较小的子块参照较大的父块"
+    "## 2、高级方法1：较小的子块参照较大的父块"
    ]
   },
   {
