--- a/LLM_RAG/code/04_高级RAG/02_选择最佳embedding和重排序模型.ipynb
+++ b/LLM_RAG/code/04_高级RAG/02_选择最佳embedding和重排序模型.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 设置环境"
+    "### 设置环境、key和下载数据"
    ]
   },
   {
@@ -107,7 +107,7 @@
    "source": [
     "documents = SimpleDirectoryReader(input_files=[\"llama2.pdf\"]).load_data()\n",
     "\n",
-    "node_parser = SimpleNodeParser.from_defaults(chunk_size=512)  \n",
+    "node_parser = SimpleNodeParser.from_defaults(chunk_size=512)  # 块大小为512\n",
     "nodes = node_parser.get_nodes_from_documents(documents)"
    ]
   },
